--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,11 +1,131 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Bootstrap</title>
     <meta charset="utf-8">
-    <title></title>
-  </head>
-  
-  <body>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
+  </head>
+
+  <body>
+    <nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Bootstrap</a>
+    </div>
+
+      </div>
+    </nav>
+
+        <div class="col-sm-1"></div>
+        <div class="container-fluid col-sm-10">
+          <h1>Clientes
+            <img src="imagens/clientes.png" class="img-rounded" width="30" height="30"/>
+          </h1>
+
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputPassword3" class="col-sm-2 control-label">Senha</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control" id="inputPassword3" placeholder="Senha">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10">
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox"> Lembre-me
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-success">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                  Login
+                </button>
+
+                  <button type="submit" class="btn btn-primary">
+                      <span class="glyphicon glyphicon-plus-sign"></span>
+                      Nova conta
+                  </button>
+              </div>
+            </div>
+          </form>
+
+          <hr/>
+
+          <div class="panel panel-success">
+            <!-- Default panel contents -->
+            <div class="panel-heading">Listagem de Clientes</div>
+            <div class="panel-body">
+                  <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th>#</th>
+                        <th>Nome</th>
+                        <th>Sobrenome</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>1</td>
+                        <td>Jô Jô</td>
+                        <td>Zunio</td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>Meu Cunhado</td>
+                        <td>Mendonça</td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>Crazy Monkey</td>
+                        <td>Leitão</td>
+                      </tr>
+                    </tbody>
+                  </table>
+
+                  <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">&laquo;</span>
+                        </a>
+                      </li>
+                      <li><a href="#">1</a></li>
+                      <li><a href="#">2</a></li>
+                      <li><a href="#">3</a></li>
+                      <li><a href="#">4</a></li>
+                      <li><a href="#">5</a></li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">&raquo;</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+        </div>
+        <div class="col-sm-1"></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/bootstrap.min"></script>
   </body>
 </html>
